# music-sync

./: .gitignore  pyproject.toml  test.json
music_sync/: __main__.py
